--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Diese CSS Datei sorgt dafür, dass HTML Sachen, die der Browser definiert
+    zurückgesetzt werden. -->
+    <link rel="stylesheet" href="reset.min.css">
     
     <!-- Der Titel, der im Browserfenster angezeigt wird -->
     <title>Template</title>
